5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3558/executions/1578_1330.log
== TEST (2019-03-25 19:33:44) 
-- CODE:
a=6
t=250
print(t/a)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:33:48) 
-- CODE:
a=6
t=250
print(t/a)
-- EXECUTION TIME:
0.144206
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:34:26) 
-- CODE:
a=6
t=250
print((roundt/a)
-- ERROR:
File "XXXX", line 4
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:38:07) 
-- CODE:
a=6
t=250
y=t/a
print(round(y,2)
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:38:09) 
-- CODE:
a=6
t=250
y=t/a
print(round(y,2)
-- EXECUTION TIME:
0.128628
-- ERROR:
  File "/home/codebench/codes/1578/1330/main.py", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:38:27) 
-- CODE:
a=6
t=250
y=t/a
print(round(y,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:38:29) 
-- CODE:
a=6
t=250
y=t/a
print(round(y,2))
-- EXECUTION TIME:
0.17668
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
